--- a/config_template/config_template_qwert.json
+++ b/config_template/config_template_qwert.json
@@ -149,7 +149,7 @@
     {
       "tag":"🛑 广告拦截",
       "type":"selector",
-      "outbounds":[,
+      "outbounds":[
         "🛑 全球拦截",
         "🎯 全球直连"
       ]
