--- a/config_template/config_template_qwert.json
+++ b/config_template/config_template_qwert.json
@@ -105,14 +105,14 @@
       "type":"selector",
       "outbounds":[
         "♻️ 自动选择",
+        "🚀 手动切换",
         "🎯 全球直连",
         "🇭🇰 香港节点",
         "🇹🇼 台湾节点",
         "🇯🇵 日本节点",
         "🇰🇷 韩国节点",
         "🇸🇬 狮城节点",
-        "🇺🇲 美国节点",
-        "{all}"
+        "🇺🇲 美国节点"
       ]
     },
     {
@@ -183,7 +183,7 @@
       ],
       "url": "http://www.gstatic.com/generate_204",
       "interval": "1m",
-      "tolerance": 30
+      "tolerance": 50
     },
     {
       "tag":"🇹🇼 台湾节点",
@@ -196,7 +196,7 @@
       ],
       "url": "http://www.gstatic.com/generate_204",
       "interval": "1m",
-      "tolerance": 30
+      "tolerance": 50
     },
     {
       "tag":"🇯🇵 日本节点",
@@ -209,7 +209,7 @@
       ],
       "url": "http://www.gstatic.com/generate_204",
       "interval": "1m",
-      "tolerance": 30
+      "tolerance": 50
     },
     {
       "tag":"🇰🇷 韩国节点",
@@ -222,7 +222,7 @@
       ],
       "url": "http://www.gstatic.com/generate_204",
       "interval": "1m",
-      "tolerance": 30
+      "tolerance": 50
     },
     {
       "tag":"🇸🇬 狮城节点",
@@ -235,7 +235,7 @@
       ],
       "url": "http://www.gstatic.com/generate_204",
       "interval": "1m",
-      "tolerance": 30
+      "tolerance": 50
     },
     {
       "tag":"🇺🇲 美国节点",
@@ -248,7 +248,7 @@
       ],
       "url": "http://www.gstatic.com/generate_204",
       "interval": "1m",
-      "tolerance": 30
+      "tolerance": 50
     },{
       "type": "dns",
       "tag": "dns-out"
