--- a/config_template/config_template_qwert.json
+++ b/config_template/config_template_qwert.json
@@ -128,6 +128,7 @@
       "type":"selector",
       "outbounds":[
         "🚀 节点选择",
+        "♻️ 自动选择",
         "🚀 手动切换",
         "🎯 全球直连",
         "🇭🇰 香港节点",
@@ -139,11 +140,20 @@
       ]
     },
     {
-      "tag":"🌏 国内服务",
+      "tag":"🇨🇳 国内服务",
       "type":"selector",
       "outbounds":[
         "🎯 全球直连",
-        "🛑 全球拦截"
+        "🛑 全球拦截",
+        "🚀 节点选择",
+        "♻️ 自动选择",
+        "🚀 手动切换",
+        "🇭🇰 香港节点",
+        "🇹🇼 台湾节点",
+        "🇯🇵 日本节点",
+        "🇰🇷 韩国节点",
+        "🇸🇬 狮城节点",
+        "🇺🇲 美国节点"
       ]
     },
     {
@@ -171,6 +181,22 @@
     {
       "type": "block",
       "tag": "🛑 全球拦截"
+    },
+    {
+      "tag": "🐟 漏网之鱼",
+      "type":"selector",
+      "outbounds":[
+        "🚀 节点选择",
+        "♻️ 自动选择",
+        "🚀 手动切换",
+        "🎯 全球直连",
+        "🇭🇰 香港节点",
+        "🇹🇼 台湾节点",
+        "🇯🇵 日本节点",
+        "🇰🇷 韩国节点",
+        "🇸🇬 狮城节点",
+        "🇺🇲 美国节点"
+      ]
     },
     {
       "tag":"🇭🇰 香港节点",
@@ -277,7 +303,7 @@
       },
       {
         "geosite": "category-ads-all",
-        "outbound": "🛑 全球拦截"
+        "outbound": "🛑 广告拦截"
       },
       {
         "clash_mode": "global",
@@ -288,10 +314,6 @@
         "outbound": "🎯 全球直连"
       },
       {
-        "geosite":"geolocation-!cn",
-        "outbound":"🌏 国外服务"
-      },
-      {
         "geosite": ["cn"],
         "outbound": "🇨🇳 国内服务"
       },
@@ -300,12 +322,19 @@
         "outbound": "🇨🇳 国内服务"
       },
       {
+        "geosite":"geolocation-!cn",
+        "outbound":"🌏 国外服务"
+      },
+      {
         "geosite": ["private"],
         "outbound": "🎯 全球直连"
       },
       {
         "geoip": ["private"],
         "outbound": "🎯 全球直连"
+      },
+      {
+        "outbound": "🐟 漏网之鱼"
       }
     ]
   },
