--- a/config_template/config_template_qwert.json
+++ b/config_template/config_template_qwert.json
@@ -205,7 +205,7 @@
         "{all}"
       ],
       "filter":[
-        {"action":"exclude","keywords":["🇭🇰|HK|hk|香港|港|深港"]}
+        {"action":"include","keywords":["🇭🇰|HK|hk|香港|港|深港"]}
       ],
       "url": "http://www.gstatic.com/generate_204",
       "interval": "1m",
@@ -218,7 +218,7 @@
         "{all}"
       ],
       "filter":[
-        {"action":"exclude","keywords":["🇹🇼|TW|tw|台湾|台"]}
+        {"action":"include","keywords":["🇹🇼|TW|tw|台湾|台"]}
       ],
       "url": "http://www.gstatic.com/generate_204",
       "interval": "1m",
@@ -231,7 +231,7 @@
         "{all}"
       ],
       "filter":[
-        {"action":"exclude","keywords":["🇯🇵|JP|jp|日本|日"]}
+        {"action":"include","keywords":["🇯🇵|JP|jp|日本|日"]}
       ],
       "url": "http://www.gstatic.com/generate_204",
       "interval": "1m",
@@ -244,7 +244,7 @@
         "{all}"
       ],
       "filter":[
-        {"action":"exclude","keywords":["🇰🇷|KR|kr|韩国|韩"]}
+        {"action":"include","keywords":["🇰🇷|KR|kr|韩国|韩"]}
       ],
       "url": "http://www.gstatic.com/generate_204",
       "interval": "1m",
@@ -257,7 +257,7 @@
         "{all}"
       ],
       "filter":[
-        {"action":"exclude","keywords":["🇸🇬|SG|sg|新加坡|坡"]}
+        {"action":"include","keywords":["🇸🇬|SG|sg|新加坡|坡"]}
       ],
       "url": "http://www.gstatic.com/generate_204",
       "interval": "1m",
@@ -270,7 +270,7 @@
         "{all}"
       ],
       "filter":[
-        {"action":"exclude","keywords":["🇺🇲|US|us|美国|美"]}
+        {"action":"include","keywords":["🇺🇲|US|us|美国|美"]}
       ],
       "url": "http://www.gstatic.com/generate_204",
       "interval": "1m",
